[tool.poetry]
name = "calmlib"
version = "0.5.1" # refactoring - move utils from beta to stable
description = "Calmlib"
authors = ["Reliable Magician <petr.b.lavrov@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8"
pytest = "*"
typer = "*"
toml = "*"
pytz = "*"
tqdm = "*"
pyperclip = "*"
mongoengine = "*"
loguru = "*"
# defaultenv = { git = "https://github.com/bobuk/defaultenv.git", branch ="master", optional = true }
# bmmb = { git = "https://github.com/calmmage/bot_me_maybe.git", branch ="main", optional = true }
gpt_kit = { git = "https://github.com/calmmage/gpt_kit.git", branch = "main", optional = true }
PyGithub = "*"
python-dotenv = "*"
gitpython = "*"
#assemblyai = "*"
#whisperx = { git = "https://github.com/m-bain/whisperX.git", branch = "main" }
#PyDrive = "*"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
pandas = ">=1.0.0"
pytest = "*"
pytest-mongodb = "*"
black = "*"
easydict = ">=1.10"

#pytest = "*"
#tqdm = "*"
#matplotlib = "*"
#numpy = "*"
#pandas = "*"
#seaborn = "*"
#ipykernel = "*"
#ipywidgets = "*"
#joblib = "*"
#retry = "*"
#pyperclip = "*"
#paramiko = "*"
#scp = "*"
#pymorphy2 = "*"
#langchain = "*"

[tool.poetry.extras]
full = ["dropbox", "protobuf", "pandas", "seaborn", "defaultenv", "bmmb",
    "gpt_kit", "httpx", "pydantic", "bokeh", "click", "fastapi", "nltk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Home" = "https://github.com/calmmage/calmlib"
