[tool.poetry]
name = "calmlib"
version = "1.0.1" # rework pyproject.toml for faster builds
description = "Calmlib"
authors = ["Reliable Magician <petr.b.lavrov@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# todo: cleanup dependencies to speed up installation and resolving
[tool.poetry.dependencies]
python = ">=3.12,<4.0"
loguru = ">=0.7"
# for parsing version
toml = ">=0.10"
python-dotenv = "*"


[tool.poetry.group.extras.dependencies]
# dependencies for extra features

[tool.poetry.group.test.dependencies]
pytest = ">=6"
pytest-mongodb = "*"

[tool.poetry.group.docs.dependencies]
#mkdocs = ">=1.6"

[tool.poetry.group.dev.dependencies]
# dev / research utils
jupyter = ">=1.0.0"
black = ">=24"
pre-commit = ">=3.8"
tqdm = "*"

# data analysis, research
#pandas = ">=2.0.0"
#seaborn = "*"
#bokeh = "*"
#matplotlib = "*"
#numpy = "*"

# cli
#click = "*"
#typer = "*"

# API
#fastapi = "*"
#httpx = "*"  # async http client

# git ops
#PyGithub = "*"
#gitpython = "*"

# Misc
#protobuf = "*"
#dropbox = "*"
#nltk = "*"  # natural language toolkit. Word collections etc.
#easydict = ">=1.10"  # for easy access to dict keys - dotdict
#pyperclip = "*"  # for copying to clipboard

# Unsorted
#aiogram = "*"
#streamlit = "*"

#ipykernel = "*"
#ipywidgets = "*"
#joblib = "*"
#retry = "*"
#paramiko = "*"
#scp = "*"
#pymorphy2 = "*"

#pydantic = ">=2"
#pydantic-settings = ">=2"
#pydub = ">=0.25"
#openai = ">=1.45"
#apscheduler = ">=4"
#tiktoken = ">=0.7"
#aiolimiter = ">=1.1"
#langchain-anthropic = ">=0.2"
#langchain-openai = ">=0.2"
#langchain = ">=0.3"
#pytz = "*"
#mongoengine = "*" # databases

#assemblyai = "*"
#whisperx = { git = "https://github.com/m-bain/whisperX.git", branch = "main" }
#PyDrive = "*" # google drive
langchain = "*"
langchain-openai = "*"
langchain-community = "*"
langchain-anthropic = "*"
langfuse = "*"
pydub = "*"
tiktoken = "*"
aiolimiter = "*"

# legacy. Todo: Sort out
#defaultenv = { git = "https://github.com/bobuk/defaultenv.git", branch ="master", optional = true }
#bmmb = { git = "https://github.com/calmmage/bot_me_maybe.git", branch ="main", optional = true }
#gpt_kit = { git = "https://github.com/calmmage/gpt_kit.git", branch = "main", optional = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Home" = "https://github.com/calmmage/calmlib"
