[project]
name = "calmlib"
version = "2.0.12"
description = "Calmlib"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = ["Programming Language :: Python", "Programming Language :: Python :: 3", "Development Status :: 4 - Beta", "Environment :: Other Environment", "Intended Audience :: Developers", "Operating System :: OS Independent", "Topic :: Software Development :: Libraries :: Python Modules", ]
dependencies = [
    "loguru>=0.7.3",
    "toml>=0.10",
    "python-dotenv",
    "deprecated>=1.2.17",
    "tqdm",
]

[[project.authors]]
name = "Reliable Magician"
email = "petr.b.lavrov@gmail.com"

[dependency-groups]
extras = [
    "pymongo",
    "aiogram",
    "protobuf",
    "pydub>=0.25",
    "pyperclip",
    "aiolimiter>=1.1",
    "deepl>=1.18",
    "litellm>=1.67",
    "langfuse",
]
test = ["pytest>=6",
    "pytest-mongodb",
    "vulture>=2.14",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pyupgrade>=3.19.1",
    "pyright>=1.1.399",
    "ruff>=0.11.6",
]
docs = ["mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings>=0.25", ]
dev = [
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project.urls]
Home = "https://github.com/calmmage/calmlib"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ['calmlib']
