[metadata]
name = Calmlib
version = attr: calmlib.__version__
description = Calmlib
author = Petr Lavrov
author_email = petr.b.lavrov@gmail.com
url = https://github.com/calmquant/calmlib
long_description = file: README.md
license = MIT

[options]
packages = find:
install_requires =
    pytz
    tqdm
    pyperclip
    mongoengine

[options.extras_require]
full =
    dropbox
    protobuf
    pandas
    seaborn
    defaultenv @ git+https://github.com/bobuk/defaultenv@master#egg=defaultenv
    bot_me_maybe @ git+https://github.com/calmmage/bot_me_maybe@main#egg=bmmb
    gpt_kit @ git+https://github.com/calmmage/gpt_kit.git@main#egg=gpt_kit
